add: get generation status endpoint
